# ChangeLog for sys-apps/sandbox
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/sandbox/ChangeLog,v 1.17 2005/06/09 17:34:43 azarah Exp $

*sandbox-1.2.9 (09 Jun 2005)

  09 Jun 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.9.ebuild:
  Update version.

*sandbox-1.2.8 (13 May 2005)

  13 May 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.8.ebuild:
  Cleanups and hopefully finally kill bug #91541.  Fix bug #92478.

*sandbox-1.2.7 (12 May 2005)

  12 May 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.7.ebuild:
  Lots of cleanups and fixes - see ChangeLog in /usr/share/doc.

*sandbox-1.2.6 (10 May 2005)

  10 May 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.6.ebuild:
  Workaround for tsocks incompatability, bug #91541.

*sandbox-1.2.5-r2 (09 May 2005)

  09 May 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +sandbox-1.2.5-r2.ebuild:
  On some versions of portage, CFLAGS_* do not survive across ebuild.sh
  stages, so we must ensure the multilib setup always gets rerun for each
  stage.

*sandbox-1.2.5-r1 (06 May 2005)

  06 May 2005; Jeremy Huddleston <eradicator@gentoo.org>
  +sandbox-1.2.5-r1.ebuild:
  Revbump to fix problems with amd64 2004.3's multilib. Cleaned up multilib
  handling in general. 2004.3 amd64 users should have working 32bit sandbox
  again.

  04 May 2005; Mike Frysinger <vapier@gentoo.org> sandbox-1.2.5.ebuild:
  Fix multilib building on amd64/2004.3 profiles.

*sandbox-1.2.5 (04 May 2005)

  04 May 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.5.ebuild:
  General fixes.  Fix for bug #91431.

*sandbox-1.2.4 (03 May 2005)

  03 May 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.4.ebuild:
  Some speedups (bug #91040) and uclibc fixes.

*sandbox-1.2.3 (29 Apr 2005)

  29 Apr 2005; Martin Schlemmer <azarah@gentoo.org> +sandbox-1.2.3.ebuild:
  Fixup libc detection.  Fix bug or two.

*sandbox-1.2.2 (28 Apr 2005)
